# app-psp

./: CMakeLists.txt  README.md  build.sh  main.c  main.cpp
.devcontainer/: devcontainer.json
include/: LLMInference.cpp  LLMInference.h  common.c  common.h  graphic.c  graphic.cpp  graphic.h  logic.c  logic.h  player.c  player.h  utils.cpp  utils.h  words.c  words.h
test/: old_main.c  test  test.c
